--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "@clerk/clerk-react": "^5.31.2",
     "@tailwindcss/vite": "^4.1.6",
     "html-react-parser": "^5.2.5",
+    "k-convert": "^1.0.6",
+    "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.6"
   },
