--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-router": "^7.6.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
