Integrate frontend witth backend

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 DB_URI = "mongodb://OppsbergAdmin:glimouette@localhost:27017/OppsbergDB?authSource=admin"
+FRONTEND_URL = "http://localhost:5173"
 CLERK_WEBHOOK_SIGNING_SECRET = "whsec_LHRF6g5LkDUhZDydfwSedBgkWJMX5L8z"
 
 JWT_SECRET = "hash#oppsberg"
@@ -7,5 +8,9 @@ JWT_SECRET = "hash#oppsberg"
 API_KEY="443995666959822"
 API_SECRET="I74eSZe2v11n8ibILE6_qhX4FRk"
 CLOUD_NAME="ddiybfbzx"
+
+# Clerk
+CLERK_PUBLISHABLE_KEY=pk_test_c3VpdGVkLWRvZy0xMS5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_keZhDMSm2UUp95uC8QSRGAjWOMZXO6xNTdudx8Nvkt
 
 # BACKEND_URL = ngrok http --url="https://upward-remotely-grizzly.ngrok-free.app" 4000
